--- a/config/settings.yml
+++ b/config/settings.yml
@@ -8,6 +8,7 @@ user:
 
 lesson:
   name_max: 50
+  per_page: 5
 
 word:
   content_max: 250
@@ -18,6 +19,7 @@ answer:
 course:
   name_max: 50
   description: 250
+  per_page: 5
 
 category:
   name_max: 50
