--- a/rails_best_practices.yml
+++ b/rails_best_practices.yml
@@ -26,7 +26,9 @@ RemoveTrailingWhitespaceCheck: { }
 RemoveUnusedMethodsInControllersCheck: { except_methods: [],
   ignored_files: [
     "app/controllers/pages_controller.rb",
-    "app/controllers/users_controller.rb"
+    "app/controllers/users_controller.rb",
+    "app/controllers/categories_controller.rb",
+    "app/controllers/courses_controller.rb"
   ]
 }
 RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
