--- a/rails_best_practices.yml
+++ b/rails_best_practices.yml
@@ -38,7 +38,8 @@ RemoveUnusedMethodsInControllersCheck: { except_methods: [],
     "app/controllers/admin/courses_controller.rb",
     "app/controllers/admin/words_controller.rb",
     "app/controllers/admin/answers_controller.rb",
-    "app/controllers/admin/lessons_controller.rb"
+    "app/controllers/admin/lessons_controller.rb",
+    "controllers/admin/pages_controller.rb"
   ]
 }
 RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
